# python-project-lvl1

./: .pyproject.toml.swp  Makefile  README.md  pyproject.toml
brain_games/: engine.py  even.py
brain_games/games/: calc.py  even.py  even.py.save  gcd.py  isprime.py  prime.py  progress.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.py.save  brain_games.py  brain_gcd.py  brain_isprime.py  brain_prime.py  brain_progression.py  cli.py  engine.py
startitin36_brain_games.egg-info/: PKG-INFO  SOURCES.txt
