[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry]
packages = [
  { include = "brain_games" },
]

name = "startitin36_brain_games"
version = "0.5.1"
description = ""
authors = ["Leto_RUS <hahmatnur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
