[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry]
packages = [
  { include = "brain_games" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable"
]

repository = "https://github.com/startitin36/python-project-lvl1"

name = "startitin36_brain_games"
version = "0.9.4"
description = "My first test project on Hexlet"
authors = ["Leto_RUS <hahmatnur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
